Bug 78030 - Bitmaps are missing allover the UI
Summary: Bitmaps are missing allover the UI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Thomas Arnhold
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-28 09:30 UTC by Thomas Arnhold
Modified: 2014-04-28 10:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Chart Wizard broken (70.01 KB, image/png)
2014-04-28 09:30 UTC, Thomas Arnhold
Details
Chart Wizard working (62.71 KB, image/png)
2014-04-28 09:31 UTC, Thomas Arnhold
Details
Fontwork broken (19.04 KB, image/png)
2014-04-28 09:31 UTC, Thomas Arnhold
Details
Fontwork working (76.37 KB, image/png)
2014-04-28 09:32 UTC, Thomas Arnhold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Arnhold 2014-04-28 09:30:49 UTC
Created attachment 98118 [details]
Chart Wizard broken

Allover the program many bitmaps are missing. For example in writer: Insert > Image > Fontwork Gallery. Or in calc: Insert > Object > Chart. I've attached some screen shots describing the problem.

Problem started with 2d786ef2961002893d532a7d2087055857e51c17.
Comment 1 Thomas Arnhold 2014-04-28 09:31:28 UTC
Created attachment 98119 [details]
Chart Wizard working
Comment 2 Thomas Arnhold 2014-04-28 09:31:47 UTC
Created attachment 98120 [details]
Fontwork broken
Comment 3 Thomas Arnhold 2014-04-28 09:32:26 UTC
Created attachment 98121 [details]
Fontwork working

Working means before the above commit.
Comment 4 Commit Notification 2014-04-28 09:37:43 UTC
Thomas Arnhold committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=789d3b363f9a0619d14b37a74f37809d05230594

fdo#78030 - Bitmaps are missing allover the UI



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.