fdo#78030 - Bitmaps are missing allover the UI

Original behavior was to call DrawBitmap without the size argument.

        case IMAGETYPE_BITMAP:
        {
            const Bitmap &rBitmap = *static_cast< Bitmap* >( rImage.mpImplData->mpData );
            if( nStyle & IMAGE_DRAW_DISABLE )
                DrawBitmapEx( rPos, makeDisabledBitmap(rBitmap) );
            else
                DrawBitmap( rPos, rBitmap );
        }
        break;

A check of bIsValidSize is needed here, too.

This brings the missing bitmaps back.

Change-Id: I60582090a7543b3916b15675af1a5ec9ee216270